src/sass/pages/_index.scss
@use "../utils/" as *;

.index {
    @include center-flex-column(25px);
    min-height: 82.5dvh;

    position: relative;

    &__container {
        width: 100%;

        @include center-flex-column;

        position: relative;
    }

    &__label {
        &--dropzone {

            display: inline-flex;
            justify-content: center;
            align-items: center;

            aspect-ratio: 1/1;
            height: inherit;

            background-color: var(--bg-secondary);
            color: var(--color-secondary);

            border: 2px dashed currentColor;
            border-radius: 15px;

            position: relative;

            &::before {
                content: "Upload or drop an image";

                position: absolute;
                top: 15%;
                left: 50%;

                translate: -50% 0%;
                text-align: center;
            }

            &.dragging {
                color: var(--color-primary);
                border: 2px solid currentColor;

                filter: contrast(75%);

                &::before {
                    content: "Drop image here";
                }
            }

            &.invalid-drop {
                &::before {
                    content: "Data dropped is not a file!";
                }
            }

            &.invalid-img-upload {
                &::before {
                    content: "File uploaded is not an image!";
                }
            }

            &.invalid-img-drop {
                &::before {
                    content: "File dropped is not an image!";
                }
            }
        }

        &--range {}
    }

    &__input {
        min-width: 300px;
        border-radius: 100vmax;

        @include input-range-style;
    }

    &__controls {
        @include center-flex-column(25px);

        width: 100%;

        margin-block: 25px;
    }

    &__image {
        height: auto;
        width: auto;
    }

    &__svg {
        width: 25%;
        height: 25%;
    }

    &__canvas {
        border: 2px solid red;
        border-radius: 10px;

        z-index: 0;

        margin-block: 25px;

        &.hide {
            z-index: -1;
        }

    }

    &__delete-button {
        background-color: var(--bg-primary);

        border: 2px solid currentColor;
        border-top: none;
        border-radius: 0 0 0 10px;

        padding: 10px 20px;

        z-index: 3;

        position: absolute;
        top: 0;
        right: 0;
    }
}

